--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "wbr-youtube-player",
+  "name": "@wbroberts/youtube-player",
   "author": "William Roberts <willbarronroberts@gmail.com>",
-  "version": "0.0.2",
+  "version": "0.0.1",
+  "homepage": "https://github.com/wbroberts/youtube-player",
   "description": "A YouTube iFrame web component that makes it more simple to integrate the iFrame into your app",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -19,8 +20,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^10.12.18",
-    "@stencil/core": "~0.15.2"
+    "@stencil/core": "~0.15.2",
+    "@types/node": "^10.12.18"
   },
   "license": "MIT"
 }
